feat: implement multi-step input form

--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
           "default": [],
           "items": {
             "type": "object",
+            "required": [
+              "label",
+              "description",
+              "suffixes"
+            ],
             "properties": {
               "label": {
                 "type": "string",
