--- a/.vscodeignore
+++ b/.vscodeignore
@@ -3,9 +3,11 @@
 src/**
 .gitignore
 .yarnrc
-vsc-extension-quickstart.md
 **/tsconfig.json
 **/eslint.config.mjs
 **/*.map
 **/*.ts
 **/.vscode-test.*
+
+assets/**
+!assets/logo.png
