--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "LICENSE"
   ],
   "main": "./out/extension.js",
+  "icon": "./assets/logo.png",
   "contributes": {
     "commands": [
       {
